#
# Copyright © 2021 Barry Schwartz
#
# This program is free software: you can redistribute it and/or
# modify it under the terms of the GNU General Public License, as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received copies of the GNU General Public License
# along with this program. If not, see
# <https://www.gnu.org/licenses/>.
#

#--------------------------------------------------------------------------

AC_PREREQ([2.71])
AC_INIT([ats2-spookyhash],[1.0.0],[],[ats2-spookyhash],[])

AC_CONFIG_SRCDIR([spookyhash/CATS/spookyhash-implementation.cats])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([build-aux])
AC_CANONICAL_BUILD                 dnl On what platform are we compiling?
AC_CANONICAL_HOST                  dnl For what platform are we compiling?
AC_USE_SYSTEM_EXTENSIONS           dnl Define such macros as _GNU_SOURCE.

AM_INIT_AUTOMAKE
AM_SILENT_RULES
AM_MAINTAINER_MODE
LT_INIT

AC_ARG_VAR([PATSHOME],[the home of the ATS2 compiler])

AC_ARG_VAR([PKGCONFIG_PATSHOME],
  [The PATSHOME setting to put in the pkg-config file [default="${PATSHOME}"]])
if test -z "${PKGCONFIG_PATSHOME}"; then
  PKGCONFIG_PATSHOME="${PATSHOME}"
fi
if test -z "${PKGCONFIG_PATSHOME}"; then
  AC_MSG_ERROR([Please set PKGCONFIG_PATSHOME on the configure command line.])
fi

AC_ARG_ENABLE([write-reference-data],
  [AS_HELP_STRING([--enable-write-reference-data],
    [enable GNUmakefile support to re-write the reference test data; do not do this on big-endian platforms])],
  [enable_write_reference_data=yes],
  [enable_write_reference_data=no])
AM_CONDITIONAL([WRITE_REFERENCE_DATA],
  [test x"${enable_write_reference_data}" = xyes])

AM_CONDITIONAL([DEPENDENCY_TRACKING],
  [test x"${enable_dependency_tracking}" != xno])

#--------------------------------------------------------------------------
#
# Checks for programs.

AC_PROG_CC
AC_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_CXX_C_O
AC_CHECK_PROGS([PATSOPT],[patsopt])
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_MKDIR_P
AC_PROG_AWK
AC_PROG_SED
AC_PROG_FGREP
AC_PROG_EGREP

# Enable optional code coverage analysis.
AX_CODE_COVERAGE

#--------------------------------------------------------------------------
#
# Checks for libraries.

#--------------------------------------------------------------------------
#
# Checks for header files.

#--------------------------------------------------------------------------
#
# Checks for typedefs, structures, and compiler characteristics.

AX_CHECK_ALIGNED_ACCESS_REQUIRED

AC_C_BIGENDIAN(,,,
  [AC_MSG_ERROR([Universal binary files are not yet supported.])])

#--------------------------------------------------------------------------
#
# Checks for library functions.

#--------------------------------------------------------------------------

CPPFLAGS="${CPPFLAGS}${CPPFLAGS+ }\$(CODE_COVERAGE_CPPFLAGS)"
CFLAGS="${CFLAGS}${CFLAGS+ }\$(CODE_COVERAGE_CFLAGS)"

# You can use ‘@GNU@’ to make GNU Make constructs unbothersome to
# Automake. (By the way, you often can use ‘$(eval ...)’ as well, but
# @GNU@ here may be better.)
AC_SUBST([GNU],[])

StM_REQUIRE_GNU_MAKE_IN_PATH
StM_CONFIG_MAKEFILES

AC_CONFIG_FILES(
  [tests/SpookyV2.h:reference-implementation/SpookyV2.h
   tests/SpookyV2.cpp:reference-implementation/SpookyV2.cpp])

AC_CONFIG_FILES([ats2-spookyhash.pc])
AC_CONFIG_FILES([spookyhash.pc])

AC_CONFIG_FILES([list-ats-dependencies.dats])

AC_ARG_VAR([POSIX_SH],[The full absolute path of a POSIX shell])
POSIX_SH=${POSIX_SH-`command -p -v sh`}
AC_CONFIG_FILES([tests/compute-reference-for-seeds-eq-zero.sh],
                [chmod +x tests/compute-reference-for-seeds-eq-zero.sh])
AC_CONFIG_FILES([tests/compute-reference-for-hash128-seed.sh],
                [chmod +x tests/compute-reference-for-hash128-seed.sh])
AC_CONFIG_FILES([tests/compute-reference-for-hash64-seed.sh],
                [chmod +x tests/compute-reference-for-hash64-seed.sh])
AC_CONFIG_FILES([tests/compute-reference-for-hash32-seed.sh],
                [chmod +x tests/compute-reference-for-hash32-seed.sh])

AC_OUTPUT

#--------------------------------------------------------------------------
# local variables:
# coding: utf-8
# end:
